--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Striped by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Striped by HTML5 UP</title>
@@ -18,8 +13,9 @@
 		<!-- Content -->
 			<div id="content">
 				<div class="inner">
-
-					
+				<!--
+					Insert content here			
+				-->		
 				</div>
 			</div>
 
