Insertion calendar dans activite candidat
Attention encore des bug et pas de synchro sur les dates ou la bdd

--- a/demo_calendar.html
+++ b/demo_calendar.html
@@ -11,12 +11,12 @@ Seulement pour http://www.nanane.fr/
     <head>
         <title>Lesny - Calendrier</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <link rel="stylesheet" media="screen" type="text/css" title="Design" href="Demo_calendar_style.css" />
-                <link rel="stylesheet" media="screen" type="text/css" title="Design" href="Demo_calendar_jquery.css" />
-        <script type="text/javascript" src="jquery-1.3.2.min.js"></script>
-        <script type="text/javascript" src="jquery-ui-1.7.2.custom.min.js"></script>
-        <script type="text/javascript" src="Demo_calendar_script.js"></script>
-        <script type="text/javascript" src="jquery.corner.js"></script>
+        <link rel="stylesheet" media="screen" type="text/css" title="Design" href="./assets/css/Demo_calendar_style.css" />
+        <link rel="stylesheet" media="screen" type="text/css" title="Design" href="./assets/css/Demo_calendar_jquery.css" />
+        <script type="text/javascript" src="./js/jquery-1.3.2.min.js"></script>
+        <script type="text/javascript" src="./js/jquery-ui-1.7.2.custom.min.js"></script>
+        <script type="text/javascript" src="./js/Demo_calendar_script.js"></script>
+        <script type="text/javascript" src="./js/jquery.corner.js"></script>
     </head>
     <body>
 
